# FlowFang

./: .gitignore  AGENTS.md  CONTEXT-MAP.md  Cargo.toml  rust-toolchain.toml
.github/workflows/: ci.yml
.scratch/flow-audit/: prd.md
crates/flow-analyzer/: CONTEXT.md  Cargo.toml
crates/flow-analyzer-tui/: CONTEXT.md  Cargo.toml
crates/flow-analyzer-tui/src/: main.rs
crates/flow-analyzer/src/: api.rs  main.rs  stats.rs
crates/flow-common/: CONTEXT.md  Cargo.toml
crates/flow-common/src/: config.rs  error.rs  lib.rs  shm.rs  types.rs
crates/flow-common/tests/: config_tests.rs  shm_tests.rs
crates/flow-ebpf/: CONTEXT.md  Cargo.toml
crates/flow-ebpf/src/: lib.rs  processor.rs  sampler.rs
crates/flow-processor/: CONTEXT.md  Cargo.toml
crates/flow-processor/src/: main.rs
crates/flow-sampler/: CONTEXT.md  Cargo.toml
crates/flow-sampler/src/: main.rs
deploy/: Dockerfile  docker-entrypoint.sh  install.sh  uninstall.sh
docs/adr/: 0001-aya-ebpf-framework.md  0002-shared-memory-ipc.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
ebpf/: CONTEXT.md
ebpf/processor.bpf.rs/: Cargo.toml
ebpf/processor.bpf.rs/src/: main.rs
ebpf/sampler.bpf.rs/: Cargo.toml
ebpf/sampler.bpf.rs/src/: main.rs
