[workspace]
resolver = "2"
members = [
    "crates/flow-common",
    "crates/flow-ebpf",
    "crates/flow-sampler",
    "crates/flow-analyzer",
    "crates/flow-analyzer-tui",
    "crates/flow-processor",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/minc-nice-100/FlowFang"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde-big-array = "0.5"
serde_json = "1"
toml = "0.8"
serde_yaml = "0.9"
memmap2 = "0.9"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
axum = "0.8"
ratatui = "0.29"
crossterm = "0.28"
aya = "0.13"
clap = { version = "4", features = ["derive"] }
signal-hook = "0.3"