[package]
name = "flow-analyzer-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "flow-analyzer-tui"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
log.workspace = true
env_logger.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
ratatui.workspace = true
crossterm = "0.28"
reqwest = { version = "0.12", features = ["json"] }