[package]
name = "flow-analyzer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "flow-analyzer"
path = "src/main.rs"

[dependencies]
flow-common = { path = "../flow-common" }
anyhow.workspace = true
log.workspace = true
env_logger.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
serde_yaml.workspace = true
clap.workspace = true
axum.workspace = true
tokio-stream.workspace = true
uuid.workspace = true