[package]
name = "flow-common"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde-big-array.workspace = true
serde_json.workspace = true
toml.workspace = true
serde_yaml.workspace = true
memmap2.workspace = true
uuid.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"