[package]
name = "flow-sampler"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "flow-sampler"
path = "src/main.rs"

[dependencies]
flow-common = { path = "../flow-common" }
flow-ebpf = { path = "../flow-ebpf" }
anyhow.workspace = true
log.workspace = true
env_logger.workspace = true
tokio.workspace = true
serde.workspace = true
toml.workspace = true
serde_yaml.workspace = true
clap = { version = "4", features = ["derive"] }
signal-hook.workspace = true